[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Проект игры разума"
authors = ["Vasiliy <services@zorenko.info>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"