[tool.poetry]
name = "hexlet-code"
version = "0.1.17"
description = "Проект игры разума"
authors = ["Vasiliy <services@zorenko.info>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
